--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "ky": "^1.8.2",
     "lucide-react": "^0.532.0",
     "msw": "^2.10.4",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.61.1",
     "react-router": "^7.7.1",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "uuid": "^11.1.0",
