--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ky": "^1.8.2",
     "lucide-react": "^0.532.0",
     "msw": "^2.10.4",
+    "neverthrow": "^8.2.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
