--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.11",
+    "@tanstack/react-query": "^5.84.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "ky": "^1.8.2",
     "lucide-react": "^0.532.0",
     "msw": "^2.10.4",
-    "neverthrow": "^8.2.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
